--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery-Portfolio</title>
-    <link rel="stylesheet" href="public/styles.css" />
-    <link rel="stylesheet" href="public/gallery.css" />
+    <link rel="stylesheet" href="public/styles.css?v=2" />
+    <link rel="stylesheet" href="public/gallery.css?v=2" />
     <link rel="icon" href="public/assets/favicon.svg" type="image/svg+xml" />
   </head>
   <body>
@@ -21,11 +21,11 @@
     </div>
 
     <!-- 加载JavaScript模块 -->
-    <script src="public/data-loader.js"></script>
-    <script src="public/tag-filter.js"></script>
-    <script src="public/image-loader.js"></script>
-    <script src="public/auto-scroll.js"></script>
-    <script src="public/layout.js"></script>
-    <script src="public/gallery.js"></script>
+    <script src="public/data-loader.js?v=2"></script>
+    <script src="public/tag-filter.js?v=2"></script>
+    <script src="public/image-loader.js?v=2"></script>
+    <script src="public/auto-scroll.js?v=2"></script>
+    <script src="public/layout.js?v=2"></script>
+    <script src="public/gallery.js?v=2"></script>
   </body>
 </html> 
