--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <span class="close">&times;</span>
       <img class="modal-content" id="img01" />
       <div id="exif-info"></div>
-      <button id="load-original-btn" class="load-original-btn">加载原图</button>
+      <button id="load-original-btn" class="load-original-btn">下载原图</button>
     </div>
 
     <!-- 加载JavaScript模块 -->
