--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!-- Modal for image display -->
     <div id="myModal" class="modal">
       <span class="close">&times;</span>
+      <div class="nav-btn prev-btn" onclick="gallery.imageLoader.showPrevImage()">&#10094;</div>
       <img class="modal-content" id="img01" />
+      <div class="nav-btn next-btn" onclick="gallery.imageLoader.showNextImage()">&#10095;</div>
       <div id="exif-info"></div>
       <button id="load-original-btn" class="load-original-btn">下载原图</button>
     </div>
