--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="nav-btn prev-btn" onclick="gallery.imageLoader.showPrevImage()">&#10094;</div>
       <img class="modal-content" id="img01" />
       <div class="nav-btn next-btn" onclick="gallery.imageLoader.showNextImage()">&#10095;</div>
+      <div id="modal-loading" class="loading-dots" style="display: none;"><span></span><span></span><span></span></div>
       <div id="exif-info"></div>
       <button id="load-original-btn" class="load-original-btn">下载原图</button>
     </div>
