--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
       <div id="nf-tag-grid" class="nf-content"></div>
     </div>
 
-    <div id="loading"></div>
+    <div id="loading">
+      <div class="loading-dots">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
     <div class="gallery" id="gallery"></div>
 
     <!-- Modal for image display -->
@@ -36,12 +42,12 @@
     </div>
 
     <!-- 加载JavaScript模块 -->
-    <script src="public/data-loader.js?v=4"></script>
-    <script src="public/tag-filter.js?v=4"></script>
-    <script src="public/image-loader.js?v=4"></script>
-    <script src="public/negative-floor.js?v=4"></script>
-    <script src="public/auto-scroll.js?v=4"></script>
-    <script src="public/layout.js?v=4"></script>
-    <script src="public/gallery.js?v=4"></script>
+    <script src="public/data-loader.js?v=6"></script>
+    <script src="public/tag-filter.js?v=6"></script>
+    <script src="public/image-loader.js?v=6"></script>
+    <script src="public/negative-floor.js?v=6"></script>
+    <script src="public/auto-scroll.js?v=6"></script>
+    <script src="public/layout.js?v=6"></script>
+    <script src="public/gallery.js?v=6"></script>
   </body>
 </html> 
