--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery-Portfolio</title>
-    <link rel="stylesheet" href="public/styles.css?v=5" />
-    <link rel="stylesheet" href="public/gallery.css?v=5" />
+    <title>中环家具</title>
+    <link rel="stylesheet" href="public/styles.css?v=8" />
+    <link rel="stylesheet" href="public/gallery.css?v=8" />
     <link rel="icon" href="public/assets/favicon.svg" type="image/svg+xml" />
   </head>
   <body>
@@ -42,12 +42,12 @@
     </div>
 
     <!-- 加载JavaScript模块 -->
-    <script src="public/data-loader.js?v=7"></script>
-    <script src="public/tag-filter.js?v=7"></script>
-    <script src="public/image-loader.js?v=7"></script>
-    <script src="public/negative-floor.js?v=7"></script>
-    <script src="public/auto-scroll.js?v=7"></script>
-    <script src="public/layout.js?v=7"></script>
-    <script src="public/gallery.js?v=7"></script>
+    <script src="public/data-loader.js?v=8"></script>
+    <script src="public/tag-filter.js?v=8"></script>
+    <script src="public/image-loader.js?v=8"></script>
+    <script src="public/negative-floor.js?v=8"></script>
+    <script src="public/auto-scroll.js?v=8"></script>
+    <script src="public/layout.js?v=8"></script>
+    <script src="public/gallery.js?v=8"></script>
   </body>
 </html> 
