--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>中环家具</title>
+    <title>中环家居</title>
     <link rel="stylesheet" href="public/styles.css?v=8" />
     <link rel="stylesheet" href="public/gallery.css?v=8" />
     <link rel="icon" href="public/assets/favicon.svg" type="image/svg+xml" />
