--- a/upload.html
+++ b/upload.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>中环家具 - 后台管理</title>
+  <title>中环家居 - 后台管理</title>
   <style>
     :root {
       --primary: #18181b; /* Zinc 900 */
