--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="nav-btn next-btn" onclick="gallery.imageLoader.showNextImage()">&#10095;</div>
       <div id="modal-loading" class="loading-dots" style="display: none;"><span></span><span></span><span></span></div>
       <div id="exif-info"></div>
-      <button id="load-original-btn" class="load-original-btn">下载原图</button>
+      <button id="load-original-btn" class="load-original-btn">查看原图</button>
     </div>
 
     <!-- 加载JavaScript模块 -->
